<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_item_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings2"
        app:showAsAction="never" />

    <item
        android:id="@+id/faqButton"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/faq_s"
        app:showAsAction="never" />

    <item
        android:id="@+id/contactLog"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/sms_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/contactButton"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/contact4"
        app:showAsAction="never" />

    <item
        android:id="@+id/sync"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/sync_contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/resetApp"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/reset_app"
        app:showAsAction="never" />
</menu>

<!-- Search, should appear as action button -->


