<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="quick.SMS.contacts">


    <item
        android:id="@+id/make_call"
        android:icon="@drawable/default_image"
        android:orderInCategory="100"
        android:title="@string/phone_call"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_overflow_holo_dark"
        android:orderInCategory="101"
        android:title="@string/options"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/selectNumber"
                android:icon="@android:drawable/ic_input_get"
                android:title="@string/select_number"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/add_message"
                android:orderInCategory="100"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/add_message"
                app:showAsAction="always" />
        </menu>

    </item>
</menu>


    <!-- Search, should appear as action button -->


